--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.15.2",
+    "mongoose": "^4.9.3",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "redux-thunk": "^2.2.0"
