--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "react-scripts": "0.9.5",
     "redux-logger": "^3.0.1"
   },
