--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "mocha": "^3.2.0",
+    "morgan": "^1.8.1",
     "react-scripts": "0.9.5",
     "redux-logger": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start: server": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
